@@ -1,4 +1,5 @@
 HEAD
+	+ Show ad messages in SubscriptionInfo model
 	+ Remove useless code due to offer 2013
 	+ Retrieve the maximum users from Zentyal Remote
 	+ Added new i18n editions
